# Opencv_project

./: README.md
AgeGender/: AgeGender.pro  main.cpp
Chapter5_NumberPlateRecognition/: DetectRegions.cpp  DetectRegions.h  OCR.cpp  OCR.h  Plate.h  main.cpp  trainOCR.cpp  trainSVM.cpp
Object-Detection/: HOG.py  dmp.cpp  gabor.py  sift_demo.py  utility_funtion.py
StereoDisparity/: StereoDisparity.pro  bm.cpp  bm.h  bm_main.cpp  main.cpp  sgbm.cpp  sgbm.h
StereoDisparity/tools/: auxiliary.cpp  auxiliary.h
bundle_adjustment/: CMakeLists.txt
camera_calibrate/: camera_calibrate.py  capture_image.py  stereo_calibrate.cpp  stereo_calibrate.py  test.py
cascade/: bow_training.py  create_neg.py  create_pos.py  gen_data.sh  main.py  negtive.txt  pos.vec  positive.txt  svm.xml  svm_trainning.py  test_cascade.py  train.sh  train_cascade.py
cascade/TrainCasecade/: params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
ceiling_image_eval/: CMakeLists.txt  ceiling_image_eval.pro  main.cpp
ceiling_image_eval/include/: ceiling_image_eval.h
ceiling_image_eval/src/: ceiling_image_eval.cpp
computeHomography/: compute_homography.py
create_ground_number/: create_ground.py  pascal_voc_io.py
cv_project/: README.md
cv_project/Aruco/c++/: CMakeLists.txt  generate_marker.cpp  poseestamation.cpp  poseestamation.h
cv_project/CascadeTest/: CascadeTest.vcxproj  main.cpp
cv_project/CrackDetect/: CrackDetect.vcxproj  main.cpp
cv_project/Hu不变矩/: Hu不变矩.vcxproj  main.cpp
cv_project/KNN/: KNN.vcxproj  main.cpp
cv_project/Mat初始化/: Mat初始化.vcxproj  main.cpp
cv_project/SVM/: SVM.vcxproj  main2.cpp
cv_project/k-mean聚类/: k-mean聚类.vcxproj  main.cpp  main2.cpp
cv_project/read_ir/: CMakeLists.txt  compute_scale.py  main.cpp  show_img.py  show_ir.py
cv_project/universal_intrinsics_demo/: CMakeLists.txt  main.cpp
cv_project/傅里叶变换例子/: Homomorphic.cpp  main.cpp  傅里叶变换2.cpp  傅里叶变换例子.vcxproj  傅里叶变换例子.vcxproj.filters
cv_project/分水岭算法/: main.cpp  segment.cpp  分水岭算法.vcxproj  分水岭算法.vcxproj.filters
cv_project/图像特征/: GeometryFeature.cpp  GeometryFeature.h  图像特征.vcxproj  图像特征.vcxproj.filters
cv_project/图片旋转/: main.cpp
cv_project/基于词袋模型的图像分类/: BowClass.py  README.md  classify.xml  test.py  train.py  utils.py
cv_project/极线校正/: main.cpp  极线校正.vcxproj
cv_project/灰度共生矩阵/: GLCM.cpp  GLCM.h  main.cpp  灰度共生矩阵.vcxproj  灰度共生矩阵.vcxproj.filters
cv_project/解帧小程序/: Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  main.cpp  video_to_image.pro  解帧小程序.vcxproj  解帧小程序.vcxproj.filters
cv_project/计算协方差矩阵/: main.cpp  计算协方差矩阵.vcxproj
cv_project/边缘检测/: Laplacian.cpp  sobel.cpp
cv_project/运动模板检测/: main.cpp  运动模板检测.vcxproj
cv_project/随机森林/: main.cpp  (+1 more)
eigen/: main.cpp  map_useage.cpp
face/: README.md
generate_data/: .gitignore  README  create_data.py  generate_hand.py  get_roi.py  pb.py
ini/: CMakeLists.txt  ini.cpp  ini_reader.cpp  main.cpp  obstacle_detection.ini
orb_feature_detect/: CMakeLists.txt  main.cpp
pedestrian_detect/: README.md  server.log.2020-03-13  test.py  webapp.py
recognize-digits/: recognize_digits.py
rotationEvalution/: CMakeLists.txt  main.cpp
stiching/: Match.py  Stitch.py  image_sort.py  pano.py  stitch_image.py
test/: CMakeLists.txt  main.cpp
translationEvaluation/: CMakeLists.txt  main.cpp
triangulation/: main.cpp
wholeScale/: CMakeLists.txt  README  computeglobalscale.cpp  main.cpp  universal_intrinsics.cpp  wholeScale  wholeScale.pro
windTurbine/: windTurbine.opensdf  windTurbine.sln
yolov3_dnn/: main.cpp
(+61 files in other folders)
